# passman

./: .justfile  Cargo.toml
src/: cli.rs  completion.rs  config.rs  crypto.rs  keygen.rs  main.rs
src/commands/: archive.rs  create.rs  edit.rs  init.rs  insert.rs  list.rs  mod.rs  remove.rs  show.rs
src/completions/: bash.rs  clap.rs  mod.rs
src/crypto/: age.rs  backend.rs  crypto.rs  detect.rs  mod.rs  rage.rs
src/utils/: gather_config.rs  git_sync.rs  keygen.rs  mod.rs  qr.rs
