[package]
name = "passman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
walkdir = "2"
git2 = "0.18"
tempfile = "3"
arboard = "2"
qrcode = "0.13"
dialoguer = "0.11"
anyhow = "1.0.98"
dirs = "6.0.0"
